--- a/src/styles/noscript.scss
+++ b/src/styles/noscript.scss
@@ -1,53 +1,4 @@
 // This stylesheet is used when the user agent has no JavaScript capabilities (or has it disabled)
-// Sets dark theme according to user agent preferences
-
-// Default light theme
-:root, :root:not([data-theme]) {
-  --gray: #2a3439;
-  --red: #a72145;
-  --yellow: #ffc832;
-  --code-color: black;
-  --code-bg-color: rgba(42, 52, 57, 0.05);
-  --code-border-color: rgba(42, 52, 57, 0.25);
-  --blockquote-color: black;
-  --blockquote-bg-color: rgb(247, 249, 249);
-  --blockquote-left-border-color: rgb(195, 205, 210);
-  --body-background-color: white;
-  --body-foreground-color: white;
-  --body-color: rgb(34,34,34);
-  --div-brand-a-color: black;
-  --white-elem-color: black;
-  --white-a: #2a3439;
-  --nav-links-a: #2a3439;
-  --publish-date-author: #2a3439;
-  --section-header-h2-color: black;
-  --rust-logo-filter: initial;
-}
-
-// Dark theme (probed from user prefs)
-@media (prefers-color-scheme: dark) {
-  :root, :root:not([data-theme]) {
-    --gray: #2a3439;
-    --red: #a72145;
-    --yellow: #ffc832;
-    --code-color: white;
-    --code-bg-color: rgba(213, 203, 198, 0.05);
-    --code-border-color: rgba(213, 203, 198, 0.25);
-    --blockquote-color: rgb(195, 205, 210);
-    --blockquote-bg-color: rgba(213, 203, 198, 0.05);
-    --blockquote-left-border-color: rgb(195, 205, 210);
-    --body-background-color: #181a1b;
-    --body-foreground-color: #e8e6e3;
-    --body-color: white;
-    --div-brand-a-color: white;
-    --white-elem-color: white;
-    --white-elem-a: #d5cbc6;
-    --nav-links-a: #d5cbc6;
-    --publish-date-author: #d5cbc6;
-    --section-header-h2-color: white;
-    --rust-logo-filter: drop-shadow(1px 0 0px #fff) drop-shadow(0 1px 0 #fff) drop-shadow(-1px 0 0 #fff) drop-shadow(0 -1px 0 #fff);
-  }
-}
 
 // Don't show the theme selector button when JavaScript is disabled
 #theme-icon {
